Adds padding to help menu
BUG=6300094

Review URL: https://codereview.appspot.com/6300094

--- a/trunk/src/timeline_view.css
+++ b/trunk/src/timeline_view.css
@@ -99,6 +99,10 @@
   margin-left: 0;
 }
 
+.timeline-view-help-overlay {
+  padding: 6px;
+}
+
 .timeline-button {
   background-color: rgba(255, 255, 255, 0.5);
   border: 1px solid rgba(0, 0, 0, 0.2);
