Make text in the analysis area selectable.
BUG=24
TEST=select slice, counter, etc; select text from anaylsis area

Review URL: https://codereview.appspot.com/6301091

--- a/trunk/src/timeline_analysis.css
+++ b/trunk/src/timeline_analysis.css
@@ -3,9 +3,11 @@
  * found in the LICENSE file. */
 
 .timeline-analysis {
-    -webkit-user-select: text;
     font-family: monospace;
     white-space: pre;
+}
+.timeline-analysis * {
+   -webkit-user-select: text !important;
 }
 
 .timeline-slice {
