Ruler remains stationary on thread scroll.
Threads within test are created using a loop.

BUG=21

Review URL: https://codereview.appspot.com/6301079

--- a/trunk/src/timeline.css
+++ b/trunk/src/timeline.css
@@ -7,11 +7,21 @@
   cursor: default;
 }
 
+.timeline {
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+}
+
 .timeline-drag-box {
   background-color: rgba(0, 0, 255, 0.25);
   border: 1px solid rgb(0, 0, 96);
   font-size: 75%;
   position: fixed;
+}
+
+.timeline > .timeline-thread-list {
+  -webkit-box-flex: 1;
+  overflow: auto;
 }
 
 .timeline-thread-track {
