Add drag handle to timeline analysis.
BUG=18

Review URL: https://codereview.appspot.com/6294058

--- a/trunk/src/timeline_view.css
+++ b/trunk/src/timeline_view.css
@@ -60,16 +60,15 @@
   -webkit-box-flex: 1;
 }
 
-.timeline-view > .analysis-container-drag-handle {
+.timeline-drag-handle {
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#E5E5E5), to(#D1D1D1));
   height: 8px;
   border-top: 1px solid white;
   border-bottom: 1px solid #8e8e8e;
 }
+
 .timeline-view > .analysis-container {
-  border-top: 1px solid white;
-  max-height: 250px;
-  min-height: 250px;
+  height: 250px;
   overflow: auto;
   padding-left: 2px;
   padding-right: 2px;
@@ -148,7 +147,6 @@
   box-shadow: 0 0 .05em rgba(0, 0, 0, 0.4);
   color: rgba(0, 0, 0, 1);
 }
-
 
 .timeline-view-import-errors-button {
   color: darkred;
