--- a/trunk/src/timeline_view.css
+++ b/trunk/src/timeline_view.css
@@ -65,6 +65,7 @@
   height: 8px;
   border-top: 1px solid white;
   border-bottom: 1px solid #8e8e8e;
+  cursor: ns-resize;
 }
 
 .timeline-view > .analysis-container {
