--- a/trunk/src/timeline.css
+++ b/trunk/src/timeline.css
@@ -119,6 +119,10 @@
   height: 12px;
 }
 
+.timeline-viewport-track-with-distance-measurements {
+  height: 24px;
+}
+
 .timeline-viewport-track .timeline-canvas-based-track-canvas-container {
   border-bottom: 1px solid #8e8e8e;
 }
