--- a/trunk/src/timeline.css
+++ b/trunk/src/timeline.css
@@ -12,6 +12,11 @@
   display: -webkit-box;
 }
 
+.timeline-model-track-container {
+  -webkit-box-flex: 1;
+  overflow: auto;
+}
+
 .timeline-drag-box {
   background-color: rgba(0, 0, 255, 0.25);
   border: 1px solid rgb(0, 0, 96);
