Recognize JSON-parseable strings and prettify them

--- a/trunk/src/timeline_analysis.css
+++ b/trunk/src/timeline_analysis.css
@@ -28,6 +28,10 @@
     text-align: left;
 }
 
+.timeline-analysis-table-row {
+    vertical-align: top;
+}
+
 .timeline-analysis-table-row:nth-child(2n+0) {
     background-color: #e2e2e2;
 }
