Clicking slice groups and objects in analysis view causes a selection change.

--- a/trunk/src/tracing/timeline_analysis_view.css
+++ b/trunk/src/tracing/timeline_analysis_view.css
@@ -1,6 +1,7 @@
 /* Copyright (c) 2012 The Chromium Authors. All rights reserved.
  * Use of this source code is governed by a BSD-style license that can be
- * found in the LICENSE file. */
+ * found in the LICENSE file.
+ */
 
 .analysis {
     font-family: monospace;
@@ -19,7 +20,7 @@
 .analysis-table a {
     color: -webkit-link;
     cursor: pointer;
-    textDecoration: underline;
+    text-decoration: underline;
 }
 
 .analysis-table > tr > td:first-child {
