--- a/trunk/src/tracing/analysis/analysis_results.css
+++ b/trunk/src/tracing/analysis/analysis_results.css
@@ -1,7 +1,16 @@
-/* Copyright (c) 2012 The Chromium Authors. All rights reserved.
+/* Copyright (c) 2013 The Chromium Authors. All rights reserved.
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
+.analysis-results {
+    font-family: monospace;
+    white-space: pre;
+}
+
+.analysis-results * {
+   -webkit-user-select: text !important;
+   cursor: text;
+}
 .analysis-table {
     border-collapse: collapse;
     border-width: 0;
