--- a/trunk/src/tracing/analysis/analysis_results.css
+++ b/trunk/src/tracing/analysis/analysis_results.css
@@ -16,12 +16,6 @@
     border-width: 0;
 }
 
-.analysis-table a {
-    color: -webkit-link;
-    cursor: pointer;
-    text-decoration: underline;
-}
-
 .analysis-table > tr > td:first-child {
     padding-left: 2px;
 }
@@ -41,3 +35,11 @@
 .analysis-table-row:nth-child(2n+0) {
     background-color: #e2e2e2;
 }
+
+
+.selection-changing-link {
+    color: -webkit-link;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
