--- a/trunk/src/about_tracing/profiling_view.css
+++ b/trunk/src/about_tracing/profiling_view.css
@@ -1,12 +1,17 @@
 /* Copyright (c) 2012 The Chromium Authors. All rights reserved.
  * Use of this source code is governed by a BSD-style license that can be
- * found in the LICENSE file. */
+ * found in the LICENSE file.
+ */
 
 .profiling-view {
   -webkit-box-flex: 1;
   -webkit-box-orient: vertical;
   display: -webkit-box;
   padding: 0;
+}
+
+.profiling-view .controls .save {
+  margin-left: 64px !important;
 }
 
 .profiling-view > .container {
