Analysis view will expand selections when clicked.
If you follow an entry in the selection view that has multiple rows currently
it will just display the same information again. This CL will, instead,
list out the display of each of the rows of the selected type.

BUG=
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/9100043

--- a/trunk/src/tracing/analysis/analysis_link.css
+++ b/trunk/src/tracing/analysis/analysis_link.css
@@ -3,8 +3,12 @@
  * found in the LICENSE file.
  */
 .analysis-link {
-    color: -webkit-link;
-    cursor: pointer;
-    text-decoration: underline;
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.analysis-link:hover {
+  cursor: pointer;
 }
 
