--- a/trunk/src/tracing/analysis/analysis_view.css
+++ b/trunk/src/tracing/analysis/analysis_view.css
@@ -2,3 +2,15 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
+.analysis-view {
+  display: -webkit-flex;
+
+}
+
+.analysis-view:not(.viewing-object) {
+  overflow: auto;
+}
+
+.analysis-view > * {
+  -webkit-flex: 1 0 auto;
+}
