--- a/trunk/src/tracing/timeline_view.css
+++ b/trunk/src/tracing/timeline_view.css
@@ -2,12 +2,12 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
 
-.view * {
+.timeline-view * {
   -webkit-user-select: none;
   box-sizing: border-box;
 }
 
-.view {
+.timeline-view {
   -webkit-box-flex: 1;
   -webkit-box-orient: vertical;
   cursor: default;
@@ -16,7 +16,7 @@
   padding: 0;
 }
 
-.view > .control > .title {
+.timeline-view > .control > .title {
   font-size: 14px;
   height: 19px;
   padding-left: 2px;
@@ -24,55 +24,55 @@
   padding-top: 2px;
 }
 
-.view > .control {
+.timeline-view > .control {
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#E5E5E5), to(#D1D1D1));
   background-color: #e6e6e6;
   border-bottom: 1px solid #8e8e8e;
   display: -webkit-box;
 }
 
-.view > .control > .controls {
+.timeline-view > .control > .controls {
   display: -webkit-box;
 }
 
-.view > .control > span {
+.timeline-view > .control > span {
   padding-left: 5px;
   padding-right: 10px;
 }
 
-.view > .control > .controls > button,
-.view > .control > .controls > label {
+.timeline-view > .control > .controls > button,
+.timeline-view > .control > .controls > label {
   font-size: 11px;
   margin: 1px 2px 1px 2px;
   height: 19px;
 }
 
-.view > .control > .spacer {
+.timeline-view > .control > .spacer {
   -webkit-box-flex: 1;
 }
 
-.view > .container {
+.timeline-view > .container {
   -webkit-box-flex: 1;
   display: -webkit-box;
   border-bottom: 1px solid #8e8e8e;
 }
 
-.view > .container > * {
+.timeline-view > .container > * {
   -webkit-box-flex: 1;
 }
 
-.view > .analysis-container {
+.timeline-view > .analysis-view {
+  display: -webkit-flex;
   height: 250px;
-  overflow: auto;
   padding-left: 2px;
   padding-right: 2px;
 }
 
-.view .selection {
+.timeline-view .selection {
   margin: 2px;
 }
 
-.view .selection ul {
+.timeline-view .selection ul {
   margin: 0;
 }
 
