Move system and continuous tracing buttons to record dialog.
BUG=151
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/9270043

--- a/trunk/src/tracing/record_selection_dialog.css
+++ b/trunk/src/tracing/record_selection_dialog.css
@@ -39,3 +39,10 @@
 .record-selection-dialog td {
   vertical-align: top;
 }
+
+.record-selection-dialog .options label {
+  display: inline-block;
+  float: right;
+  font-size: 11px;
+  margin-left: 8px;
+}
