Create ToggleButton span widget, click toggles isTrue state.
Test in toggle_button_test.html

Add the new toggle_button_test.html to tests.html

Refactor tracing.tracks.track to remove unused code and use ToggleButton

BUG=153
R=dsinclair@chromium.org

Review URL: https://codereview.appspot.com/9275043

--- a/trunk/src/tracing/timeline_view.css
+++ b/trunk/src/tracing/timeline_view.css
@@ -205,3 +205,12 @@
 .category-filter-dialog-form input {
   margin-right: 7px;
 }
+
+.toggle-button {
+  padding-left: 3px;
+}
+
+.toggle-button-text {
+  font-size: normal;
+  padding-bottom: 1px;
+}
