--- a/trunk/src/tracing/analysis/analyze_slices.css
+++ b/trunk/src/tracing/analysis/analyze_slices.css
@@ -1,6 +1,8 @@
 /* Copyright (c) 2012 The Chromium Authors. All rights reserved.
  * Use of this source code is governed by a BSD-style license that can be
- * found in the LICENSE file. */
+ * found in the LICENSE file.
+ */
+
 .analysis-slices-table-col-0 {
 }
 .analysis-slices-table-col-1 {
@@ -9,4 +11,3 @@
 .analysis-slices-table-col-2 {
     text-align: right;
 }
-
