--- a/trunk/src/tracing/timeline_view.css
+++ b/trunk/src/tracing/timeline_view.css
@@ -26,8 +26,12 @@
 }
 
 .timeline-view > .control {
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#E5E5E5), to(#D1D1D1));
   background-color: #e6e6e6;
+  background-image: -webkit-gradient(linear,
+                                     0 0,
+                                     0 100%,
+                                     from(#E5E5E5),
+                                     to(#D1D1D1));
   border-bottom: 1px solid #8e8e8e;
   display: -webkit-box;
 }
@@ -44,8 +48,8 @@
 .timeline-view > .control > .controls > button,
 .timeline-view > .control > .controls > label {
   font-size: 11px;
-  margin: 1px 2px 1px 2px;
   height: 19px;
+  margin: 1px 2px 1px 2px;
 }
 
 .timeline-view > .control > .spacer {
@@ -54,8 +58,8 @@
 
 .timeline-view > .container {
   -webkit-box-flex: 1;
-  display: -webkit-box;
   border-bottom: 1px solid #8e8e8e;
+  display: -webkit-box;
 }
 
 .timeline-view > .container > * {
@@ -144,9 +148,9 @@
 }
 
 .view-info-button {
-  width: auto;
   padding-left: 4px;
   padding-right: 4px;
+  width: auto;
 }
 
 .view-info-button:hover {
@@ -154,41 +158,41 @@
 }
 
 .view-import-errors-button {
-  color: darkred;
   border: solid 1px rgba(128, 0, 0, 0.2);
+  color: darkred;
 }
 
 .view-import-errors-button:hover {
-  color: red;
   border: solid 1px red;
+  color: red;
 }
 
 .import-errors-dialog {
-  overflow: auto;
-  min-width: 400px;
-  min-height: 200px;
-  max-width: 800px;
   max-height: 500px;
+  max-width: 800px;
+  min-height: 200px;
+  min-width: 400px;
+  overflow: auto;
 }
 
 .import-errors-dialog-text {
-  white-space: pre;
   font-family: monospace;
   margin: 8px;
+  white-space: pre;
 }
 
 .metadata-dialog {
-  overflow: auto;
-  min-width: 400px;
-  min-height: 200px;
-  max-width: 800px;
   max-height: 500px;
+  max-width: 800px;
+  min-height: 200px;
+  min-width: 400px;
+  overflow: auto;
 }
 
 .metadata-dialog-text {
-  white-space: pre;
   font-family: monospace;
   margin: 8px;
+  white-space: pre;
 }
 
 .category-filter-dialog {
@@ -199,8 +203,8 @@
 }
 
 .category-filter-dialog-form {
-  padding: 10px;
   font-size: 80%;
+  padding: 10px;
 }
 
 .category-filter-dialog-form input {
