--- a/trunk/src/ui/drag_handle.css
+++ b/trunk/src/ui/drag_handle.css
@@ -4,28 +4,28 @@
  */
 
 x-drag-handle {
+  -webkit-user-select: none;
   box-sizing: border-box;
   display: block;
-  -webkit-user-select: none;
 }
 x-drag-handle.horizontal-drag-handle {
   background-image: -webkit-gradient(linear,
-                                     0% 0%, 0% 100%,
+                                     0 0, 0 100%,
                                      from(#E5E5E5),
                                      to(#D1D1D1));
-  height: 7px;
-  border-top: 1px solid white;
   border-bottom: 1px solid #8e8e8e;
+  border-top: 1px solid white;
   cursor: ns-resize;
+  height: 7px;
 }
 
 x-drag-handle.vertical-drag-handle {
   background-image: -webkit-gradient(linear,
-                                     0% 0%, 100% 0%,
+                                     0 0, 100% 0,
                                      from(#E5E5E5),
                                      to(#D1D1D1));
-  width: 7px;
   border-left: 1px solid white;
   border-right: 1px solid #8e8e8e;
   cursor: ew-resize;
+  width: 7px;
 }
