Updates to the test runner.
A couple of changes in this CL.

1- Gen deps every 30 seconds (makes tests run about 2 seconds faster).
2- Only generate deps.js instead of deps and about_tracing files.
3- Add some statistics to the tests.html output.
4- Moves the test iframes way off screen so we never get artifacts.
5- If tests fail, the test iframe is displayed so you can see the errors.

BUG=
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/9317044

--- a/trunk/src/base/unittest.css
+++ b/trunk/src/base/unittest.css
@@ -56,3 +56,24 @@ test-case-stack {
   color: darkRed;
   font-weight: bold;
 }
+
+#test_harness h1 {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+#stats {
+  margin-bottom: 10px;
+}
+
+#pass_count {
+  color: darkgreen;
+}
+
+#fail_count {
+  color: darkRed;
+}
+
+#individual_tests {
+  margin-bottom: 20px;
+}
