Make default object view have overflow so it can scroll

--- a/trunk/src/tracing/analysis/default_object_view.css
+++ b/trunk/src/tracing/analysis/default_object_view.css
@@ -11,6 +11,10 @@
   display: block;
 }
 
+.default-object-view {
+  overflow: auto;
+}
+
 .default-object-view * {
   -webkit-user-select: text;
 }
