Make the analysis view bigger when viewing object
Do this by making the drag handle sensitive to class names. This ends up
allowing the feature to work by simply styling the analysis view's height
differently depending on whether it is viewing an object or not.

--- a/trunk/src/tracing/timeline_view.css
+++ b/trunk/src/tracing/timeline_view.css
@@ -68,9 +68,14 @@
 
 .timeline-view > .analysis-view {
   display: -webkit-flex;
-  height: 250px;
   padding-left: 2px;
   padding-right: 2px;
+}
+.timeline-view > .analysis-view:not(.viewing-object) {
+  height: 250px;
+}
+.timeline-view > .analysis-view.viewing-object {
+  height: 500px;
 }
 
 .timeline-view .selection {
