Add SliceView: a way to customize the display of a slice
Use this to make clicking RasterTasks more helpful

R=dsinclair@chromium.org, pdr@chromium.org

Review URL: https://codereview.appspot.com/9816045

--- a/trunk/src/cc/layer_viewer.css
+++ b/trunk/src/cc/layer_viewer.css
@@ -24,3 +24,8 @@ layer-viewer > quad-stack {
   overflow: auto;
   padding: 10px 10px 10px 10px;
 }
+
+layer-viewer > layer-viewer-analysis {
+  height: 150px;
+  overflow-y: auto;
+}
