Remove user-select: none on overlay so we can select --enable-skia-benchmarking
BUG=231
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/10038043

--- a/trunk/src/ui/overlay.css
+++ b/trunk/src/ui/overlay.css
@@ -35,6 +35,10 @@
   display: -webkit-flex;
 }
 
+.overlay * {
+  -webkit-user-select: auto;
+}
+
 .overlay-root > .content-host > * {
   background: rgb(255, 255, 255);
 }
