--- a/trunk/src/cc/picture_debugger.css
+++ b/trunk/src/cc/picture_debugger.css
@@ -15,23 +15,28 @@ picture-debugger > x-generic-object-view {
   width: 400px;
 }
 
+picture-debugger > left-panel {
+  -webkit-flex-direction: column;
+  display: -webkit-flex;
+}
+
+picture-debugger > left-panel > picture-info {
+  -webkit-flex: 1 0 auto;
+}
+
+picture-debugger > left-panel > picture-info > .title {
+  font-weight: bold;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 picture-debugger > x-drag-handle {
   -webkit-flex: 0 0 auto;
 }
 
-picture-debugger > raster-area > top-controls {
-  -webkit-flex: 0 0 auto;
-  background-image: -webkit-gradient(linear,
-                                     0 0, 100% 0,
-                                     from(#E5E5E5),
-                                     to(#D1D1D1));
-  border-bottom: 1px solid #8e8e8e;
-  border-top: 1px solid white;
-  display: inline;
-}
-
 picture-debugger .filename {
   -webkit-user-select: text;
+  margin-left: 5px;
 }
 
 picture-debugger > raster-area {
