--- a/trunk/src/ui/quad_stack.css
+++ b/trunk/src/ui/quad_stack.css
@@ -7,14 +7,15 @@ quad-stack {
   -webkit-flex: 1 1 100%;
   -webkit-flex-direction: column;
   display: -webkit-flex;
+  min-height: 357px;
   outline: none;
   position: relative;
   width: 100%;
   z-index: 10; /* cause our scrollbars to render above our children. */
 }
 
-quad-stack > layer-container {
-  -webkit-flex: 1 1 auto;
+quad-stack > view-container {
+  -webkit-flex: 1 1 100%;
   -webkit-transform-style: preserve-3d;
   display: -webkit-flex;
   outline: none;
@@ -28,7 +29,7 @@ quad-stack quad-view {
   top: 0;
 }
 
-quad-stack > layer-container > rect-view {
+quad-stack > view-container > rect-view {
   background-image:
     url('../images/chrome-left.png'),
     url('../images/chrome-right.png'),
