--- a/trunk/src/ui/mouse_mode_selector.css
+++ b/trunk/src/ui/mouse_mode_selector.css
@@ -12,7 +12,7 @@
   border: 1px solid #BBB;
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  height: 108px;
+  height: 138px;
   left: calc(100% - 120px);
   position: fixed;
   top: 100px;
@@ -53,9 +53,18 @@
 .mouse-mode-selector .zoom-mode-button {
   background-image: url(../images/ui-states.png);
   background-position: 0 -70px;
-  border-bottom: none;
 }
 
 .mouse-mode-selector .zoom-mode-button.active {
   background-position: -30px -70px;
+}
+
+.mouse-mode-selector .timing-mode-button {
+  background-image: url(../images/ui-states.png);
+  background-position: 0 -100px;
+  border-bottom: none;
+}
+
+.mouse-mode-selector .timing-mode-button.active {
+  background-position: -30px -100px;
 }
