Added perf tests framework with a sample test.
Added a simple perf test that calls importTraces repeatedly
with different traces.

BUG=none
R=dsinclair@chromium.org

Review URL: https://codereview.appspot.com/11799043

--- a/trunk/src/base/unittest.css
+++ b/trunk/src/base/unittest.css
@@ -89,6 +89,10 @@ span.results {
   color: darkgreen;
 }
 
+.skipped {
+  color: darkgoldenrod;
+}
+
 .failed {
   color: darkred;
   font-weight: bold;
