Add Skia ops timing info to the picture ops list view.
This patch adds timing info for each skop to the picture debugger. To
get more reliable numbers, we record this time info 3 times and average
the result. Because timing is relatively fast, I think we can get away
with doing this non-async.

BUG=
R=dsinclair@chromium.org

Review URL: https://codereview.appspot.com/12321043

--- a/trunk/src/cc/picture_ops_list_view.css
+++ b/trunk/src/cc/picture_ops_list_view.css
@@ -40,6 +40,10 @@ picture-ops-list-view > .x-list-view .list-item > .elementInfo {
   font-weight: bold;
 }
 
+picture-ops-list-view > .x-list-view .list-item > .time {
+  color: rgb(136, 0, 0);
+}
+
 .x-list-view:focus > .list-item[beforeSelection] {
   background-color: rgb(171, 217, 202);
   outline: 1px dotted rgba(0, 0, 0, 0.1);
