--- a/trunk/src/cc/layer_view.css
+++ b/trunk/src/cc/layer_view.css
@@ -3,7 +3,7 @@
  * found in the LICENSE file.
  */
 
-layer-viewer {
+layer-view {
   -webkit-flex-direction: column;
   display:  -webkit-flex;
   left: 0;
@@ -11,19 +11,19 @@ layer-viewer {
   top: 0;
 }
 
-layer-viewer > layer-tree-quad-stack-viewer {
+layer-view > layer-tree-quad-stack-view {
   -webkit-flex: 1 1 100%;
   -webkit-flex-direction: column;
   display: -webkit-flex;
   width: 100%;
 }
 
-layer-viewer > layer-viewer-analysis {
+layer-view > layer-view-analysis {
   height: 150px; /* fixed height given by drag control */
   overflow-y: auto;
 }
 
-layer-viewer > layer-viewer-analysis * {
+layer-view > layer-view-analysis * {
   -webkit-user-select: text;
 }
 
