Enable selection in unittest results list
TBR=dsinclair

Review URL: https://codereview.appspot.com/13648046

--- a/trunk/src/base/unittest.css
+++ b/trunk/src/base/unittest.css
@@ -20,6 +20,10 @@
   overflow-y: auto;
 }
 
+#test-results * {
+  -webkit-user-select: auto;
+}
+
 #test-harness h1 {
   counter-reset: suite-count;
   margin-bottom: 0;
