Overhaul of overlays & recording selectoin dialog
This began as me wanting to fix the sizing issues on the recording dialog to
make it pretty, and overflow-scroll predictably. It turned into a megapatch.

Key changes:
- Overlay system redone to use flexboxes all the way down. It had a few
  accidental block flows that were messing everything up. Then I think
  more stretch modes and max-blah modes were added to compensate, making it
  more hairy. It behaves predictably now. The record selection dialog
  for instance, has overflow-y exactly where you'd expect it.

- Using ui.dom_helpers for the sampling/etc check boxes in the record_selection  dialog
- Using an event instead of a callback that you set to know when the dialog is
  closed

--- a/trunk/src/gpu/state_view.css
+++ b/trunk/src/gpu/state_view.css
@@ -5,7 +5,7 @@
 
 .gpu-state-snapshot-view {
   background: url('../images/checkerboard.png');
-  layout: -webkit-flex;
+  display: -webkit-flex;
   overflow: auto;
 }
 
